codebird-js - changelog
=======================

2.4.1 (not yet released)
+ Pass JSHint validation

2.4.0 (2013-06-15)
+ Support multipart file uploads
- Drop unnecessary media format settings ported from PHP getimagesize
- Don't unintendedly overwrite global "url" variable
+ Add contributing guidelines

2.3.3 (2013-05-31)
- oauth2_token doesn't respect _useProxy CORS setting
- #10 setBearerToken was not public

2.3.2 (2013-05-21)
- Sorting the OAuth parameter list in IE incorrectly
- Undefined function c for debug logging
+ Correctly detect templated methods and insert their parameters

2.3.1 (2013-04-26)
- Wrong OAuth signature generation for POST requests with oauth_callback
- Wrong _ksort implementation

2.3.0 (2013-04-26)
- Bug in _detectMultipart for statuses/update calls
+ Add Array.indexOf polyfill
+ Circumvent same-origin policy with CORS
+ Make oauth_authenticate and oauth_authorize asynchronous
+ Send GET requests via JSONP for IE7-9 (don't support CORS)

2.2.3 (2012-12-03)
+ Detect HTTP method properly when accessing multi HTTP method endpoint (account/settings)
+ Add friends/list, followers/list API methods
+ Move users/recommendations to GET list

2.2.2 (2012-10-19)
+ Update methods list for API 1.1
+ Add profile banner methods
- Drop separate media upload method
- Remove OAuth token message. 1.1 is always signed.
+ Update endpoints to 1.1 endpoints, add support for old endpoints

2.2.1 (2012-09-17)
+ Update to Twitter API v1.1

2.2.0 (2012-09-17)
+ Port Codebird from PHP to JavaScript